fix letter spacing issues

--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -6,3 +6,12 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: $font-sauce;
+  src: url("../fonts/opensauce-regular.woff2") format("woff2"),
+    url("../fonts/opensauce-regular.woff2") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
