--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -8,7 +8,8 @@ html {
 
 // resets
 body {
-  font-family: $font-sauce;
+  font-family: $font-sauce, sans-serif;
+  font-weight: 500;
   min-height: 100vh;
   font-size: 1.6rem;
   background: $col-black;
