--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -4,7 +4,7 @@ $col-orange: #cb450c;
 $col-boulder: #777777;
 $col-gray: #aaaaaa;
 $font-bebas: "Bebas Neue", cursive;
-$font-sauce: "Open Sauce", sans-serif;
+$font-sauce: "Open Sauce";
 $gradient: linear-gradient(
   90deg,
   rgba(233, 227, 198, 0.5) 0%,
